--- a/03-ranking-2024.qmd
+++ b/03-ranking-2024.qmd
@@ -21,7 +21,7 @@ Objective of this chapter
 :::
 
 ::: {.my-objectives-container}
-I will display the ranking data for the `r glossary("cantril ladder")` question of `r glossary("WHR")`data 2024. In contrast to figure 2.1 of the World Happiness Report 2025 I will use a `r glossary("lollipop plot")` instead a bar plot. Additionally I will only show the value for the cantril ladder without the breakdown into its causal components.
+I will display the ranking data for the `r glossary("Cantril ladder")` question of `r glossary("WHR")`data 2024. In contrast to figure 2.1 of the World Happiness Report 2025 I will use a `r glossary("lollipop plot")` instead a bar plot. Additionally I will only show the value for the Cantril ladder without the breakdown into its causal components.
 
 :::
 ::::
@@ -40,12 +40,17 @@ I will display the ranking data for the `r glossary("cantril ladder")` question 
 ```{r}
 #| label: prepare-data
 
-ranking_2024_arrange <- base::readRDS("data/whr-cantril/rds/whr_2011_2024_arrange.rds") |> 
-    dplyr::filter(Year == 2024) |> 
-    dplyr::arrange(Rank) |> 
-    dplyr::mutate(`Country label` = 
-        base::paste0(Rank, ". ", `Country name`, " (", `Ladder score`, ")")
+whr_final_2024 <- base::readRDS("data/whr-cantril/rds/whr_final.rds") |> 
+    dplyr::filter(year == 2024 & group48 == "World [WLD]") |> 
+    dplyr::arrange(rank) |> 
+    dplyr::mutate(`country` = 
+        base::paste0(rank, ". ", `country_whr`, " (", `ladder_score`, ")")
         )
+
+my_save_data_file(
+  "whr-cantril/rds", 
+  whr_final_2024, 
+  "whr_final_2024.rds")
 ```
 
 <center>(*For this R code chunk is no output available*)</center>
@@ -57,19 +62,18 @@ ranking_2024_arrange <- base::readRDS("data/whr-cantril/rds/whr_2011_2024_arrang
 ```{r}
 #| label: cantril-ranking
 #| results: hold
-#| include: false
 
 cantril_ranking <-  function(df) {
     ggplot2::ggplot(df,
                 ggplot2::aes(
-                    x = forcats::fct_reorder(`Country label`, `Ladder score`) ,
-                    y = `Ladder score`
+                    x = forcats::fct_reorder(`country`, `ladder_score`) ,
+                    y = `ladder_score`
                 )) +
     ggplot2::geom_segment(ggplot2::aes(
-        x = `Country label`,
-        xend = `Country label`,
+        x = `country`,
+        xend = `country`,
         y = 1,
-        yend = `Ladder score`
+        yend = `ladder_score`
     ), color = "blue") +
     ggplot2::geom_point(color = "darkblue", size = 4) +
     ggplot2::theme_light() +
@@ -116,7 +120,7 @@ cantril_ranking <-  function(df) {
 #| fig-height: 20
 #| fig-width: 12
 
-cantril_ranking(dplyr::slice(ranking_2024_arrange, 1:50))
+cantril_ranking(dplyr::slice(whr_final_2024, 1:50))
 ```
 
 ::::
@@ -137,7 +141,7 @@ cantril_ranking(dplyr::slice(ranking_2024_arrange, 1:50))
 #| fig-height: 20
 #| fig-width: 12
 
-cantril_ranking(dplyr::slice(ranking_2024_arrange, 51:100))
+cantril_ranking(dplyr::slice(whr_final_2024, 51:100))
 
 ```
 
@@ -159,7 +163,7 @@ cantril_ranking(dplyr::slice(ranking_2024_arrange, 51:100))
 #| fig-height: 20
 #| fig-width: 12
 
-cantril_ranking(dplyr::slice(ranking_2024_arrange, 101:147))
+cantril_ranking(dplyr::slice(whr_final_2024, 101:147))
 ```
 
 ::::
@@ -180,7 +184,7 @@ cantril_ranking(dplyr::slice(ranking_2024_arrange, 101:147))
 #| fig-width: 12
 
 
-cantril_ranking(ranking_2024_arrange)
+cantril_ranking(whr_final_2024)
 ```
 
 ::::
